--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,48 +1,8 @@
 {
-
-// 使用 IntelliSense 了解相关属性。
-
-// 悬停以查看现有属性的描述。
-
-// 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-
-"version": "0.2.0",
-
-"configurations": [
-
-{
-
-"name": "(Windows) Launch",
-
-"type": "cppvsdbg",
-
-"request": "launch",
-
-"program": "cmd",
-
-"args": [
-
-"/C",
-
-"${fileDirname}\\${fileBasenameNoExtension}.exe",
-
-"&",
-
-"pause"
-
-],
-
-"stopAtEntry": false,
-
-"cwd": "${workspaceFolder}",
-
-"environment": [],
-
-"externalConsole":true
-
-},
-
-{"name": "C/C++: gcc.exe 生成和调试活动文件",
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "C/C++: gcc.exe 生成和调试活动文件",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
@@ -50,7 +10,7 @@
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
-            "externalConsole": true ,
+            "externalConsole": true,
             "MIMode": "gdb",
             "miDebuggerPath": "E:\\mingw64\\bin\\gdb.exe",
             "setupCommands": [
@@ -63,9 +23,10 @@
                     "description": "将反汇编风格设置为 Intel",
                     "text": "-gdb-set disassembly-flavor intel",
                     "ignoreFailures": true
-}
-
-],"preLaunchTask": "C/C++: gcc.exe 生成活动文件"
-
-}]
+                }
+            ],
+            "preLaunchTask": "C/C++: gcc.exe 生成活动文件"
+        },
+        
+    ]
 }
